<resources>
    <string name="app_name">Mis Lugares</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="acerca_de">Acerca de</string>
    <string name="autor">José Luis González</string>
    <string name="curso">Programación Multimedia y Dispositivos Móviles</string>
    <string name="instituto">CIFP Virgen de Gracia</string>
    <string name="lugar">Puertollano (Ciudad Real)</string>
    <string name="mis_lugares">Mis Lugares</string>
    <string name="mi_mapa">Mi Mapa</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="texto_ordenacion_voz">¿Cómo quieres ordenar la lista?</string>
    <string name="escanear_lugar">Escanear Lugar</string>
    <string name="escaneando_codigo">Escaneando QR de Lugar</string>
    <string name="cerrar_app">Cerrar Mis Lugares</string>
    <string name="mensaje_cerrar">¿De verdad quieres salir?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="brujula">Brújula</string>
    <string name="linterna">Linterna</string>
    <string name="contacto">Contacto</string>
    <string name="utilidades">Utilidades</string>
    <string name="contactar_email">Contactar por E-Mail</string>
    <string name="cantactar_email_mensaje">¿Desea mandar un mail al desarrolldor?</string>
    <string name="dialogo_abrir_web_titulo">Visitar URL</string>
    <string name="dialogo_abrir_web_mensaje">¿Quiere visitar esta dirección web?</string>
    <string name="backup_datos">Backup de datos</string>
    <string name="copia_de_seguridad">Copia de Seguridad</string>
    <string name="importar_exportar">Importar/Exportar</string>

    <!-- Tipos de lugares para insertar -->
    <string-array name="tipos_lugares">
        <item>Ciudad</item>
        <item>Pueblo</item>
        <item>Monumento</item>
        <item>Paisaje</item>
        <item>Bar</item>
        <item>Comida</item>
    </string-array>

    <!-- Tipos de busqueda -->
    <string-array name="tipos_busqueda">
        <item>Filtro y ordenación</item>
        <item>Ordenar por nombre ascendente</item>
        <item>Ordenar por nombre descendente</item>
        <item>Ordenar por fecha ascendente</item>
        <item>Ordenar por fecha descendente</item>
        <item>Ordenar por tipo ascendente</item>
        <item>Ordenar por tipo descendente</item>
        <item>Ordenar por favoritos ascendente</item>
        <item>Ordenar por favoritos descendente</item>
        <item>Ordenar por votos ascendente</item>
        <item>Ordenar por votos descendente</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="el_tiempo">El Tiempo</string>
</resources>