<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:title="Lugares">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                            android:id="@+id/nav_lugares"
                            android:icon="@drawable/ic_menu_lugar"
                            android:title="@string/mis_lugares"/>
                    <item
                            android:id="@+id/nav_mapa"
                            android:icon="@drawable/ic_menu_mapa"
                            android:title="@string/mi_mapa"/>
                    <item
                            android:id="@+id/nav_importar_lugar"
                            android:icon="@drawable/ic_qr_code"
                            android:title="@string/escanear_lugar"/>
                    <item
                            android:id="@+id/nav_backup"
                            android:icon="@drawable/ic_backup"
                            android:title="@string/copia_de_seguridad" />
                </group>
            </menu>
        </item>

        <item android:title="@string/utilidades">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                            android:id="@+id/nav_tiempo"
                            android:icon="@drawable/ic_tiempo"
                            android:title="@string/el_tiempo"/>
                    <item
                            android:id="@+id/nav_linterna"
                            android:icon="@drawable/ic_linterna"
                            android:title="@string/linterna"/>
                    <item
                            android:id="@+id/nav_brujula"
                            android:icon="@drawable/ic_brujula"
                            android:title="@string/brujula"/>
                </group>
            </menu>
        </item>
    </group>

    <item android:title="@string/contacto">
        <menu>
            <group android:checkableBehavior="single">
            <item
                    android:id="@+id/nav_acerca_de"
                    android:icon="@drawable/ic_acerca_de"
                    android:title="@string/acerca_de" />
            </group>
        </menu>
    </item>
</menu>