<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_lugares">

    <fragment
            android:id="@+id/nav_lugares"
            android:name="com.joseluisgs.mislugares.UI.lugares.LugaresFragment"
            android:label="@string/mis_lugares"
            tools:layout="@layout/fragment_lugares"/>

    <fragment
            android:id="@+id/nav_mapa"
            android:name="com.joseluisgs.mislugares.UI.mapa.MapaFragment"
            android:label="@string/mi_mapa"
            tools:layout="@layout/fragment_mapa"/>

    <fragment
            android:id="@+id/nav_lugar_detalle"
            android:name="com.joseluisgs.mislugares.UI.lugares.LugarDetalleFragment"
            android:label="@string/app_name"
            tools:layout="@layout/fragment_lugar_detalle"/>

    <fragment
            android:id="@+id/nav_acerca_de"
            android:name="com.joseluisgs.mislugares.UI.acerca_de.AcercaDeFragment"
            android:label="@string/acerca_de"
            tools:layout="@layout/fragment_acerca_de"/>
</navigation>