<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" android:background="@color/color_navigation_list_background">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/acercaDeImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                app:srcCompat="@drawable/ic_mapa"/>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/acercaDeAutor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/autor"
                    android:textSize="50sp" android:textStyle="bold"
                    android:textColor="@color/letter_color_splash" android:fontFamily="@font/caveat_bold"
                    tools:layout_editor_absoluteY="-7dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:id="@+id/acercaDeCurso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/curso"
                    tools:text="@string/curso" app:layout_constraintTop_toBottomOf="@+id/acercaDeAutor"
                    android:layout_marginTop="4dp" android:textColor="@color/letter_color_splash"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:id="@+id/acercaDeInstituto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/instituto"
                    tools:text="@string/instituto" app:layout_constraintTop_toBottomOf="@+id/acercaDeCurso"
                    android:layout_marginTop="4dp" android:textColor="@color/letter_color_splash"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:id="@+id/acercaDeLugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/lugar"
                    tools:text="@string/lugar" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/acercaDeInstituto"
                    android:textColor="@color/letter_color_splash" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageButton
                    android:layout_width="75dp"
                    android:layout_height="75dp" app:srcCompat="@drawable/ic_email"
                    android:id="@+id/acercaDeMail"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:srcCompat="@drawable/ic_email" style="@android:style/Widget.Material.ImageButton"
                    android:scaleType="fitXY" android:background="@color/color_navigation_list_background"
                    app:layout_constraintVertical_bias="0.495" android:layout_marginStart="46dp"/>
            <ImageButton
                    android:layout_width="75dp"
                    android:layout_height="75dp" app:srcCompat="@drawable/ic_twitter"
                    android:id="@+id/acercaDeTwitter"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:srcCompat="@drawable/ic_twitter" style="@android:style/Widget.Material.ImageButton"
                    android:scaleType="fitXY" android:background="@color/color_navigation_list_background"
                    app:layout_constraintVertical_bias="0.495"
                    app:layout_constraintStart_toEndOf="@+id/acercaDeMail" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/acercaDeGithub"/>
            <ImageButton
                    android:layout_width="75dp"
                    android:layout_height="75dp" app:srcCompat="@drawable/ic_github"
                    android:id="@+id/acercaDeGithub"
                    tools:srcCompat="@drawable/ic_github" style="@android:style/Widget.Material.ImageButton"
                    android:scaleType="fitXY" android:background="@color/color_navigation_list_background"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintVertical_bias="0.495" android:layout_marginEnd="46dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</LinearLayout>